--- a/assets/scss/sections/index.scss
+++ b/assets/scss/sections/index.scss
@@ -39,6 +39,11 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  transition: 0.3s;
+}
+
+.header.sticky {
+  background: var(--bg-color);
 }
 
 .logo {
@@ -93,6 +98,9 @@ section {
   font-size: 5.6rem;
   font-weight: 700;
   line-height: 1.3;
+}
+.home-content h1 span {
+  color: var(--text-color);
 }
 
 .home-content .text-animate {
@@ -551,7 +559,7 @@ span {
   left: 0;
   width: 0;
   height: 100%;
-  background: red;
+  background: var(--second-bg-color);
   border-radius: 0.6rem;
   z-index: -1;
   transition: 0.5s;
@@ -576,4 +584,93 @@ span {
 
 .contact form .btn-box.btns .btn {
   cursor: pointer;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 9%;
+  background: var(--second-bg-color);
+}
+.footer-text p {
+  font-size: 1.6rem;
+}
+.footer-iconTop a {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem;
+  background: var(--main-color);
+  border: 0.2rem solid var(--main-color);
+  border-radius: 1.5rem;
+  z-index: 1;
+  overflow: hidden;
+}
+.footer-iconTop a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--second-bg-color);
+  z-index: -1;
+  transition: 0.3s;
+}
+.footer-iconTop a:hover::before {
+  width: 100%;
+}
+.footer-iconTop a i {
+  font-size: 3.2rem;
+  color: var(--bg-color);
+  transition: 0.5s;
+}
+.footer-iconTop a:hover i {
+  color: var(--main-color);
+}
+
+// BREAKPOINTS
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+}
+@media (max-width: 991px) {
+  .header {
+    padding: 2rem 4%;
+  }
+  section {
+    padding: 10rem 4% 2rem;
+  }
+  .home {
+    padding: 0 4%;
+  }
+  .footer {
+    padding: 2rem 4%;
+  }
+}
+@media (max-width: 768px) {
+  .header {
+    background: var(--bg-color);
+  }
+  #menu-icon {
+    display: block;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 4%;
+    background: var(--bg-color);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  }
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+  }
 }
