--- a/assets/scss/sections/index.scss
+++ b/assets/scss/sections/index.scss
@@ -88,7 +88,7 @@ section {
   padding: 0 9%;
 
   // TODO fixing img background
-  background-image: url('images/img.jpg') none;
+  background-image: url('assets/images/home.jpg');
 
   background-size: cover;
   background-position: center;
@@ -100,6 +100,8 @@ section {
 }
 
 .home-content h1 {
+  position: relative;
+  display: inline-block;
   font-size: 5.6rem;
   font-weight: 700;
   line-height: 1.3;
@@ -139,6 +141,7 @@ section {
 }
 
 .home-content p {
+  position: relative;
   font-size: 1.6rem;
   margin: 2rem 0 4rem;
 }
@@ -274,6 +277,7 @@ section {
 }
 
 .heading {
+  position: relative;
   font-size: 5rem;
   margin-bottom: 3rem;
   text-align: center;
@@ -666,11 +670,23 @@ span {
   background: yellowgreen;
   z-index: 98;
 }
+.animate.home-img {
+  width: 50%;
+}
 .logo .animate,
 .navbar .animate,
-#menu-icon .animate {
+#menu-icon .animate,
+.home.show-animate .animate {
   animation: showRigth 1s ease forwards;
   animation-delay: calc(0.3s * var(--i));
+}
+.animate.scroll {
+  transition: 1s ease;
+  transition-delay: calc(0.3s * var(--i));
+}
+.about.home.show-animate .animate.scroll {
+  transition-delay: calc(0.3s * var(--i));
+  width: 0;
 }
 
 // BREAKPOINTS
