--- a/assets/scss/sections/index.scss
+++ b/assets/scss/sections/index.scss
@@ -124,6 +124,9 @@ section {
   background-repeat: no-repeat;
   -webkit-background-clip: text;
   background-position: -33rem 0;
+}
+
+.home.show-animate .home-content .text-animate h3 {
   animation: homeBgText 6s linear infinite;
   animation-delay: 2s;
 }
@@ -136,6 +139,8 @@ section {
   height: 100%;
   border-right: 2px solid var(--main-color);
   z-index: -1;
+}
+.home.show-animate .home-content .text-animate h3::before {
   animation: homeCursorText 6s linear infinite;
   animation-delay: 2s;
 }
@@ -324,10 +329,14 @@ span {
 }
 
 .about-content h3 {
+  position: relative;
+  display: inline-block;
   font-size: 2.6rem;
 }
 
 .about-content p {
+  position: relative;
+
   font-size: 1.6rem;
   margin: 2rem 0 3rem;
 }
@@ -361,11 +370,14 @@ span {
 }
 
 .education-column .title {
+  position: relative;
+  display: inline-block;
   font-size: 2.5rem;
   margin: 0 0 1.5rem 2rem;
 }
 
 .education-column .education-box {
+  position: relative;
   border-left: 0.2rem solid var(--main-color);
 }
 
@@ -434,6 +446,11 @@ span {
   padding-bottom: 7rem;
   background: var(--second-bg-color);
 }
+.skills h2 {
+  display: inline-block;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 .skills .skills-row {
   display: flex;
@@ -446,8 +463,13 @@ span {
 }
 
 .skills-column .title {
+  position: relative;
+  display: inline-block;
   font-size: 2.5rem;
   margin: 0 0 1.5rem;
+}
+.skills-column .skills-box {
+  position: relative;
 }
 
 .skills-box .skills-content {
@@ -544,6 +566,11 @@ span {
   min-height: auto;
   padding-bottom: 7rem;
 }
+.contact h2 {
+  display: inline-block;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 .contact form {
   max-width: 70rem;
@@ -621,6 +648,10 @@ span {
   padding: 2rem 9%;
   background: var(--second-bg-color);
 }
+.footer-text,
+.footer-iconTop {
+  position: relative;
+}
 .footer-text p {
   font-size: 1.6rem;
 }
@@ -667,7 +698,7 @@ span {
   right: 0;
   width: 100%;
   height: 100%;
-  background: yellowgreen;
+  background: var(--bg-color);
   z-index: 98;
 }
 .animate.home-img {
@@ -682,9 +713,22 @@ span {
 }
 .animate.scroll {
   transition: 1s ease;
-  transition-delay: calc(0.3s * var(--i));
+  transition-delay: calc(0.3s / var(--i));
+  animation: none;
 }
-.about.home.show-animate .animate.scroll {
+section:nth-child(odd) .animate.scroll,
+.footer .animate.scroll {
+  background: var(--second-bg-color);
+}
+
+.education .education-box .animate.scroll {
+  width: 105%;
+}
+.about.show-animate .animate.scroll,
+.education.show-animate .animate.scroll,
+.skills.show-animate .animate.scroll,
+.contact.show-animate .animate.scroll,
+.footer.show-animate .animate.scroll {
   transition-delay: calc(0.3s * var(--i));
   width: 0;
 }
@@ -708,6 +752,12 @@ span {
   }
   .footer {
     padding: 2rem 4%;
+  }
+}
+
+@media (max-width: 850px) {
+  .animate.home-img {
+    width: 55%;
   }
 }
 @media (max-width: 768px) {
