--- a/assets/scss/sections/index.scss
+++ b/assets/scss/sections/index.scss
@@ -1,45 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+
   text-decoration: none;
+
   border: none;
   outline: none;
+
+  font-family: "Poppins", sans-serif;
+
   scroll-behavior: smooth;
-  font-family: 'Poppins', sans-serif;
 }
 
 :root {
   --bg-color: #081b29;
+  --main-color: #00abf0;
   --second-bg-color: #112e42;
   --text-color: #ededed;
-  --main-color: #00abf0;
 }
 
 html {
-  font-size: 62.5%;
   overflow-x: hidden;
+
+  font-size: 62.5%;
 }
 
 body {
-  background: var(--bg-color);
   color: var(--text-color);
+  background: var(--bg-color);
 }
 
 .header {
   position: fixed;
+  z-index: 100;
   top: 0;
   left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
   width: 100%;
   padding: 2rem 9%;
-  background: transparent;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 100;
+
   transition: 0.3s;
+
+  background: transparent;
 }
 
 .header.sticky {
@@ -48,8 +57,10 @@ body {
 
 .logo {
   position: relative;
-  font-size: 2.5rem;
+
   color: var(--text-color);
+
+  font-size: 2.5rem;
   font-weight: 600;
 }
 .navbar {
@@ -57,11 +68,14 @@ body {
 }
 
 .navbar a {
-  font-size: 1.7rem;
-  color: var(--text-color);
-  font-weight: 500;
   margin-left: 3.5rem;
+
   transition: 0.3s;
+
+  color: var(--text-color);
+
+  font-size: 1.7rem;
+  font-weight: 500;
 }
 
 .navbar a:hover,
@@ -71,10 +85,14 @@ body {
 
 #menu-icon {
   position: relative;
-  font-size: 3.6rem;
-  color: var(--text-color);
-  cursor: pointer;
+
   display: none;
+
+  cursor: pointer;
+
+  color: var(--text-color);
+
+  font-size: 3.6rem;
 }
 
 section {
@@ -85,20 +103,25 @@ section {
 .home {
   display: flex;
   align-items: center;
+
   padding: 0 9%;
-  background: url('/assets/images/home.jpg') no-repeat;
-  background-size: cover;
+
+  background: url("/assets/images/home.jpg") no-repeat;
   background-position: center;
+  background-size: cover;
 }
 
 .home-content {
-  max-width: 60rem;
   z-index: 99;
+
+  max-width: 60rem;
 }
 
 .home-content h1 {
   position: relative;
+
   display: inline-block;
+
   font-size: 5.6rem;
   font-weight: 700;
   line-height: 1.3;
@@ -109,18 +132,21 @@ section {
 
 .home-content .text-animate {
   position: relative;
+
   width: 32.8rem;
 }
 
 .home-content .text-animate h3 {
-  font-size: 3.2rem;
-  font-weight: 700;
   color: transparent;
-  -webkit-text-stroke: 0.7px var(--main-color);
   background-image: linear-gradient(var(--main-color), var(--main-color));
   background-repeat: no-repeat;
-  -webkit-background-clip: text;
   background-position: -33rem 0;
+  -webkit-background-clip: text;
+
+  font-size: 3.2rem;
+  font-weight: 700;
+
+  -webkit-text-stroke: 0.7px var(--main-color);
 }
 
 .home.show-animate .home-content .text-animate h3 {
@@ -128,14 +154,17 @@ section {
   animation-delay: 2s;
 }
 .home-content .text-animate h3::before {
-  content: '';
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
+
   width: 0;
   height: 100%;
+
+  content: "";
+
   border-right: 2px solid var(--main-color);
-  z-index: -1;
 }
 .home.show-animate .home-content .text-animate h3::before {
   animation: homeCursorText 6s linear infinite;
@@ -144,35 +173,44 @@ section {
 
 .home-content p {
   position: relative;
-  font-size: 1.6rem;
+
   margin: 2rem 0 4rem;
+
+  font-size: 1.6rem;
 }
 
 .btn-box {
   position: relative;
+
   display: flex;
   justify-content: space-between;
+
   width: 34.5rem;
   height: 5rem;
 }
 
 .btn-box .btn {
   position: relative;
+  z-index: 1;
+
   display: inline-flex;
-  justify-content: center;
+  overflow: hidden;
   align-items: center;
+  justify-content: center;
+
   width: 15rem;
   height: 100%;
-  background: var(--main-color);
+
+  transition: 0.5s;
+  letter-spacing: 0.1rem;
+
+  color: var(--bg-color);
   border: 0.2rem solid var(--main-color);
   border-radius: 15px;
+  background: var(--main-color);
+
   font-size: 1.8rem;
   font-weight: 600;
-  letter-spacing: 0.1rem;
-  color: var(--bg-color);
-  z-index: 1;
-  overflow: hidden;
-  transition: 0.5s;
 }
 
 .btn-box .btn:hover {
@@ -180,8 +218,8 @@ section {
 }
 
 .btn-box .btn:nth-child(2) {
-  background: transparent;
   color: var(--main-color);
+  background: transparent;
 }
 
 .btn-box .btn:nth-child(2):hover {
@@ -193,15 +231,18 @@ section {
 }
 
 .btn-box .btn::before {
-  content: '';
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
+
   width: 0;
   height: 100%;
-  background: var(--bg-color);
-  z-index: -1;
+
+  content: "";
   transition: 0.5s;
+
+  background: var(--bg-color);
 }
 
 .btn-box .btn:hover::before {
@@ -211,26 +252,33 @@ section {
 .home-sci {
   position: absolute;
   bottom: 4rem;
-  width: 170px;
+
   display: flex;
   justify-content: space-between;
+
+  width: 170px;
 }
 
 .home-sci a {
   position: relative;
+  z-index: 1;
+
   display: inline-flex;
-  justify-content: center;
+  overflow: hidden;
   align-items: center;
+  justify-content: center;
+
   width: 40px;
   height: 40px;
-  background: transparent;
+
+  transition: 0.5s;
+
+  color: var(--main-color);
   border: 0.2rem solid var(--main-color);
   border-radius: 50%;
+  background: transparent;
+
   font-size: 20px;
-  color: var(--main-color);
-  z-index: 1;
-  overflow: hidden;
-  transition: 0.5s;
 }
 
 .home-sci a:hover {
@@ -238,15 +286,18 @@ section {
 }
 
 .home-sci a::before {
-  content: '';
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
+
   width: 0;
   height: 100%;
-  background: var(--main-color);
-  z-index: -1;
+
+  content: "";
   transition: 0.5s;
+
+  background: var(--main-color);
 }
 
 .home-sci a:hover::before {
@@ -257,32 +308,41 @@ section {
   position: absolute;
   top: 0;
   right: 0;
+
   width: 45%;
   height: 100%;
-  background: transparent;
+
   transition: 3s;
+
+  background: transparent;
 }
 
 .home-imgHover:hover {
-  background: var(--bg-color);
   opacity: 0.8;
+  background: var(--bg-color);
 }
 
 .about {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 2rem;
-  background: var(--second-bg-color);
+  justify-content: center;
+
   padding-bottom: 6rem;
+
+  background: var(--second-bg-color);
+
+  gap: 2rem;
 }
 
 .heading {
   position: relative;
-  font-size: 5rem;
+
   margin-bottom: 3rem;
+
   text-align: center;
+
+  font-size: 5rem;
 }
 
 span {
@@ -291,34 +351,41 @@ span {
 
 .about-img {
   position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 25rem;
   height: 25rem;
+
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .about-img img {
   width: 90%;
   height: 90%;
-  border-radius: 50%;
+
   border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
 }
 
 .about-img .circle-spin {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(0);
+
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+
+  transform: translate(-50%, -50%) rotate(0);
+  animation: aboutSpinner 8s linear infinite;
+
   border-top: 0.2rem solid var(--second-bg-color);
+  border-right: 0.2rem solid var(--main-color);
   border-bottom: 0.2rem solid var(--second-bg-color);
   border-left: 0.2rem solid var(--main-color);
-  border-right: 0.2rem solid var(--main-color);
-  animation: aboutSpinner 8s linear infinite;
+  border-radius: 50%;
 }
 
 .about-content {
@@ -327,19 +394,23 @@ span {
 
 .about-content h3 {
   position: relative;
+
   display: inline-block;
+
   font-size: 2.6rem;
 }
 
 .about-content p {
   position: relative;
 
-  font-size: 1.6rem;
   margin: 2rem 0 3rem;
+
+  font-size: 1.6rem;
 }
 
 .btn-box.btns {
   display: inline-block;
+
   width: 15rem;
 }
 
@@ -349,9 +420,10 @@ span {
 
 .education {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
+
   min-height: auto;
   padding-bottom: 5rem;
 }
@@ -359,6 +431,7 @@ span {
 .education .education-row {
   display: flex;
   flex-wrap: wrap;
+
   gap: 5rem;
 }
 
@@ -368,51 +441,65 @@ span {
 
 .education-column .title {
   position: relative;
+
   display: inline-block;
-  font-size: 2.5rem;
+
   margin: 0 0 1.5rem 2rem;
+
+  font-size: 2.5rem;
 }
 
 .education-column .education-box {
   position: relative;
+
   border-left: 0.2rem solid var(--main-color);
 }
 
 .education-box .education-content {
   position: relative;
+
   padding-left: 2rem;
 }
 
 .education-box .education-content::before {
-  content: '';
   position: absolute;
   top: 0;
+  left: -1.1rem;
+
   width: 2rem;
   height: 2rem;
-  background: var(--main-color);
+
+  content: "";
+
   border-radius: 50%;
-  left: -1.1rem;
+  background: var(--main-color);
 }
 
 .education-content .content {
   position: relative;
+
+  overflow: hidden;
+
+  margin-bottom: 2rem;
   padding: 1.5rem;
+
   border: 0.2rem solid var(--main-color);
   border-radius: 0.6rem;
-  margin-bottom: 2rem;
-  overflow: hidden;
 }
 
 .education-content .content::before {
-  content: '';
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
+
   width: 0;
   height: 100%;
-  background: var(--second-bg-color);
-  z-index: -1;
+
+  content: "";
   transition: 0.5s;
+
+  background: var(--second-bg-color);
 }
 
 .education-content .content:hover:before {
@@ -420,9 +507,11 @@ span {
 }
 
 .education-content .content .year {
-  font-size: 1.5rem;
-  color: var(--main-color);
   padding-bottom: 0.5rem;
+
+  color: var(--main-color);
+
+  font-size: 1.5rem;
 }
 
 .education-content .content .year i {
@@ -434,24 +523,29 @@ span {
 }
 
 .education-content .content p {
-  font-size: 1.6rem;
   padding-top: 0.5rem;
+
+  font-size: 1.6rem;
 }
 
 .skills {
   min-height: auto;
   padding-bottom: 7rem;
+
   background: var(--second-bg-color);
 }
 .skills h2 {
-  display: inline-block;
   left: 50%;
+
+  display: inline-block;
+
   transform: translateX(-50%);
 }
 
 .skills .skills-row {
   display: flex;
   flex-wrap: wrap;
+
   gap: 5rem;
 }
 
@@ -461,9 +555,12 @@ span {
 
 .skills-column .title {
   position: relative;
+
   display: inline-block;
-  font-size: 2.5rem;
+
   margin: 0 0 1.5rem;
+
+  font-size: 2.5rem;
 }
 .skills-column .skills-box {
   position: relative;
@@ -471,23 +568,29 @@ span {
 
 .skills-box .skills-content {
   position: relative;
+  z-index: 1;
+
+  overflow: hidden;
+
+  padding: 0.5rem 1.5rem;
+
   border: 0.2rem solid var(--main-color);
   border-radius: 0.6rem;
-  padding: 0.5rem 1.5rem;
-  z-index: 1;
-  overflow: hidden;
 }
 
 .skills-box .skills-content::before {
-  content: '';
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
+
   width: 0;
   height: 100%;
-  background: var(--bg-color);
-  z-index: -1;
+
+  content: "";
   transition: 0.5s;
+
+  background: var(--bg-color);
 }
 
 .skills-box .skills-content:hover:before {
@@ -499,9 +602,10 @@ span {
 }
 
 .skills-content .progress h3 {
-  font-size: 1.7rem;
   display: flex;
   justify-content: space-between;
+
+  font-size: 1.7rem;
 }
 
 .skills-content .progress h3 span {
@@ -510,15 +614,18 @@ span {
 
 .skills-content .progress .bar {
   height: 2.5rem;
-  border-radius: 0.6rem;
-  border: 0.2rem solid var(--main-color);
-  padding: 0.5rem;
   margin: 1rem 0;
+  padding: 0.5rem;
+
+  border: 0.2rem solid var(--main-color);
+  border-radius: 0.6rem;
 }
 
 .skills-content .progress .bar span {
   display: block;
+
   height: 100%;
+
   border-radius: 0.3rem;
   background: var(--main-color);
 }
@@ -564,26 +671,31 @@ span {
   padding-bottom: 7rem;
 }
 .contact h2 {
-  display: inline-block;
   left: 50%;
+
+  display: inline-block;
+
   transform: translateX(-50%);
 }
 
 .contact form {
   max-width: 70rem;
   margin: 0 auto;
+
   text-align: center;
 }
 
 .contact form .input-box {
   position: relative;
+
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .contact form .input-box .input-field {
   position: relative;
+
   width: 49%;
   margin: 0.8rem 0;
 }
@@ -593,11 +705,13 @@ span {
   width: 100%;
   height: 100%;
   padding: 1.5rem;
-  font-size: 1.6rem;
+
   color: var(--text-color);
-  background: transparent;
-  border-radius: 0.6rem;
   border: 0.2rem solid var(--main-color);
+  border-radius: 0.6rem;
+  background: transparent;
+
+  font-size: 1.6rem;
 }
 
 .contact form .input-box .input-field input::placeholder,
@@ -607,14 +721,17 @@ span {
 
 .contact form .focus {
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
+
   width: 0;
   height: 100%;
-  background: var(--second-bg-color);
-  border-radius: 0.6rem;
-  z-index: -1;
+
   transition: 0.5s;
+
+  border-radius: 0.6rem;
+  background: var(--second-bg-color);
 }
 
 .contact form .input-box .input-field input:focus ~ .focus,
@@ -626,8 +743,10 @@ span {
 
 .contact form .textarea-field {
   position: relative;
-  margin: 0.8rem 0 2.7rem;
+
   display: flex;
+
+  margin: 0.8rem 0 2.7rem;
 }
 
 .contact form .textarea-field textarea {
@@ -639,10 +758,12 @@ span {
 }
 .footer {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: space-between;
+
   padding: 2rem 9%;
+
   background: var(--second-bg-color);
 }
 .footer-text,
@@ -654,34 +775,42 @@ span {
 }
 .footer-iconTop a {
   position: relative;
+  z-index: 1;
+
   display: inline-flex;
-  justify-content: center;
+  overflow: hidden;
   align-items: center;
+  justify-content: center;
+
   padding: 0.8rem;
-  background: var(--main-color);
+
   border: 0.2rem solid var(--main-color);
   border-radius: 1.5rem;
-  z-index: 1;
-  overflow: hidden;
+  background: var(--main-color);
 }
 .footer-iconTop a::before {
-  content: '';
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
+
   width: 0;
   height: 100%;
-  background: var(--second-bg-color);
-  z-index: -1;
+
+  content: "";
   transition: 0.3s;
+
+  background: var(--second-bg-color);
 }
 .footer-iconTop a:hover::before {
   width: 100%;
 }
 .footer-iconTop a i {
-  font-size: 3.2rem;
-  color: var(--bg-color);
   transition: 0.5s;
+
+  color: var(--bg-color);
+
+  font-size: 3.2rem;
 }
 .footer-iconTop a:hover i {
   color: var(--main-color);
@@ -691,12 +820,14 @@ span {
 
 .animate {
   position: absolute;
+  z-index: 98;
   top: 0;
   right: 0;
+
   width: 100%;
   height: 100%;
+
   background: var(--bg-color);
-  z-index: 98;
 }
 .animate.home-img {
   width: 50%;
@@ -726,8 +857,9 @@ section:nth-child(odd) .animate.scroll,
 .skills.show-animate .animate.scroll,
 .contact.show-animate .animate.scroll,
 .footer.show-animate .animate.scroll {
-  transition-delay: calc(0.3s * var(--i));
   width: 0;
+
+  transition-delay: calc(0.3s * var(--i));
 }
 
 // BREAKPOINTS
@@ -766,55 +898,67 @@ section:nth-child(odd) .animate.scroll,
   }
   .navbar {
     position: absolute;
+    z-index: 1;
     top: 100%;
     left: -100%;
+
     width: 100%;
     padding: 1rem 4%;
-    background: var(--main-color);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    z-index: 1;
+
     transition: 0.25s ease;
     transition-delay: 0.25s;
+
+    background: var(--main-color);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   }
 
   .navbar.active {
     left: 0;
+
     transition-delay: 0s;
   }
 
   .navbar .active-nav {
     position: absolute;
+    z-index: -1;
     top: 0;
     left: -100%;
+
     width: 100%;
     height: 100%;
-    background: var(--bg-color);
-    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
-    z-index: -1;
+
     transition: 0.25s ease;
     transition-delay: 0s;
+
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    background: var(--bg-color);
   }
 
   .navbar .active .active-nav {
     left: 0;
+
     transition-delay: 0.25s;
   }
   .navbar a {
     display: block;
-    font-size: 2rem;
+
     margin: 3rem 0;
-    transform: translateX(-20rem);
+
     transition: 0.25s ease;
     transition-delay: 0s;
+    transform: translateX(-20rem);
+
+    font-size: 2rem;
   }
   .navbar .active a {
-    transform: translateX(0);
     transition-delay: 0.25s;
+    transform: translateX(0);
   }
   .home-imgHover {
     pointer-events: none;
-    background: var(--bg-color);
+
     opacity: 0.6;
+    background: var(--bg-color);
   }
 }
 @media (max-width: 520px) {
@@ -848,6 +992,7 @@ section:nth-child(odd) .animate.scroll,
   }
   .footer p {
     margin-top: 2rem;
+
     text-align: center;
   }
 }
@@ -859,6 +1004,7 @@ section:nth-child(odd) .animate.scroll,
     display: flex;
     align-items: center;
     flex-direction: column;
+
     text-align: center;
   }
   .home-content h1 {
@@ -888,6 +1034,7 @@ section:nth-child(odd) .animate.scroll,
   78%,
   85% {
     width: 100%;
+
     opacity: 1;
   }
   75%,
